--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <ul>
     <li><a href="https://newschemes23.exblog.jp/33689905/">Post 1 – June 22, 2025</a></li>
     <li><a href="https://newschemes23.exblog.jp/33689605/">Post 2 – June 21, 2025</a></li>
-    <!-- Add more links here -->
+     <li><a href="https://newschemes23.exblog.jp/33689478/">Post 2 – June 21, 2025</a></li>
   </ul>
 
   <footer>
